refactor update query